added WIP efs-mount script

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,8 @@
 image:
   file: .gitpod.Dockerfile
+
+tasks:
+  - name: Postgres on EFS
+    command: |
+      aws configure set region eu-central-1
+      gp idp login aws --role-arn arn:aws:iam::950174689815:role/efs-on-demand
