--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,22 @@
-version: '3.8'
-
-services:
-  postgres:
-    image: postgres:latest
-    container_name: postgres-nfs
-    environment:
-      POSTGRES_DB: mydb
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-    volumes:
-      - type: volume
-        source: postgres_data
-        target: /var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
-
 volumes:
-  postgres_data:
+  efs:
     driver: local
     driver_opts:
       type: nfs4
-      o: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport,addr=${EFS_DNS_NAME}
-      device: ":/"
+      o: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport
+      device: fs-0627d4a37934a407e.efs.eu-central-1.amazonaws.com:/
+
+services:
+  postgres-15:
+    user: 33333:33333
+    environment:
+      POSTGRES_PASSWORD: admin
+      PGDATA: /var/lib/gitpod
+    image: postgres
+    restart: always
+    hostname: postgres
+    shm_size: 1g
+    ports:
+      - "5432:5432"
+    volumes:
+      - efs:/var/lib/gitpod
