--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ volumes:
     driver_opts:
       type: nfs4
       o: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport
-      device: fs-0627d4a37934a407e.efs.eu-central-1.amazonaws.com:/
+      device: ${EFS_DNS_NAME}:/
 
 services:
   postgres-15:
